# nekRS

./: .gitmodules  CMakeLists.txt  nekrs_defs.sh  run_cmake.sh
config/: libparanumal.cmake  nekrs.bashrc.in
examples/eddy/: eddy.par  eddy.usr
src/: main.cpp  nekrs.cpp
src/core/: configReader.cpp  insSetup.cpp
src/nekInterface/: nekInterfaceAdapter.cpp
src/plugins/: avg.cpp  velRecycling.cpp
src/udf/: CMakeLists.txt  udf.cpp
